# Embedded2

./: .gitignore  .gitmodules  .travis.yml  CodeAES--Class.py  CodeAES.py  GoggleDataset  README.md  __init__.py  augment.py  automatic_notification.py  automatic_notification_DrSwabey  config_s3fd_mv2.py  data_loader.py  data_mobilenet.py  environment.yml  eval.py  goggleClassifier.py  inference_usbCam_face.py  inference_video_face.py  jetson-mv2.py  jetson-requirements.txt  jetson-ssd.py  jetson.py  loadFaces.py  main.py  model_mobilenet.py  requirements.txt  setup.py  setup.sh  ssd.py  test.py  test_mobilenet.py  test_mobilenet_camera.py  test_mobilenet_img.py  train.py  train_mobilenet.py  train_test.py  wface_helper.py  wider_helper_mobilenet.py  widerface_mobilenet.py
BlazeFace-PyTorch/: inference.py
Encryption/: AES  AES.py  decrypt.py
data/: __init__.py  face_extractor.py
db/: config.py  data_insertion.py  db_connection.py  file_transfer  file_transfer.py  imagedb.py  main.py
encode/: CMakeLists.txt  client_nvenc.cpp  compressed_io.cpp  compressed_io.h  decode_io_test.cpp  encode_compare.cpp  encode_io_test.cpp  networking.h  server_nvenc.cpp
encode/py/: README.md  setup.py  test.py  video_encode.cpp  video_encode.h
encrypt/: CodeAES.py
eval/: evaluator.py
jetson/: AES.py  CodeAES.py  FrameComparator.py  benchmark.py  data.sh  evaluator.py  face_detector.py  face_detector_threaded.py  face_extractor.py  frame_drop.py  jetson.py  learn_features.py  lk_of.py  main.py  name_giver.py  prior_box_blazeface.py  processed_hashes.txt  ssd.py  trt_inf.py
(+13010 files in other folders)
